[gd_scene load_steps=36 format=3 uid="uid://rs5vo0ryk123"]

[ext_resource type="Script" path="res://scripts/Entity_Vehicle.gd" id="1_1ym0t"]
[ext_resource type="Resource" uid="uid://dloci0bf0gaho" path="res://data/equipment/abilities/machinegun.tres" id="2_e151r"]
[ext_resource type="Script" path="res://scripts/entities/abilities/AbilityResource.gd" id="2_u6ig8"]
[ext_resource type="Resource" uid="uid://sruykpx7awph" path="res://data/equipment/abilities/microrockets.tres" id="3_1f5b1"]
[ext_resource type="Resource" uid="uid://ck17a8oiovpk3" path="res://data/ai/static.tres" id="4_p1ap5"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/ai/AI_PatrolPathRegion_R.gd" id="5_jylig"]
[ext_resource type="Resource" uid="uid://c5b4ysl7lf04x" path="res://data/factions/FAC_Enemy.tres" id="5_tjtjo"]
[ext_resource type="Resource" uid="uid://d3kysr0s4m433" path="res://data/vehicle_params.tres" id="6_rnjby"]
[ext_resource type="Script" path="res://scenes/vehicles/EntityEventBus.gd" id="7_d4xyd"]
[ext_resource type="PackedScene" uid="uid://ds2orbq8mawhl" path="res://scenes/vehicles/Vehicle Parts/bodies/Basic/VP_BodyBasic_Enemy.tscn" id="8_d4mh7"]
[ext_resource type="PackedScene" uid="uid://cegggm3e5yg4g" path="res://scenes/vehicles/Vehicle Parts/turrets/enemy_turret_base.tscn" id="9_utbqh"]
[ext_resource type="Script" path="res://scripts/entities/hitbox.gd" id="10_13g83"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/ai/AIStateMachine/AIStateMachine.gd" id="11_50sik"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/ai/AIStateMachine/AIStats.gd" id="12_txqpe"]
[ext_resource type="Curve3D" uid="uid://dapnj7ay5wnp7" path="res://scenes/map objects/MP_PatrolPath_First.tres" id="13_gw6h4"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/ai/AIStateMachine/investigate.gd" id="14_12br7"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/ai/AIStateMachine/AIState_attack.gd" id="15_mtrbh"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/ai/AIStateMachine/AIState_patrol.gd" id="16_g57o4"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/ai/AIStateMachine/AIState_overwatch.gd" id="17_6vq4v"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/ai/AIStateMachine/AIState_idle.gd" id="18_858ui"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/vehicles/VehicleStateMachine.gd" id="19_ypd7k"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/vehicles/VehicleStats.gd" id="20_ipyek"]
[ext_resource type="Curve" uid="uid://4o3elvp2wm0f" path="res://scripts/entities/statemachines/vehicles/accelVelocityCurve_default.tres" id="21_4j1co"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/vehicles/VehicleState_turn.gd" id="22_7njlb"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/vehicles/VehicleState_move.gd" id="23_dcejv"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/vehicles/VehicleState_idle.gd" id="24_hus7p"]
[ext_resource type="Script" path="res://scripts/entities/statemachines/vehicles/VehicleState_brake.gd" id="25_dwvvt"]
[ext_resource type="Script" path="res://scenes/vehicles/Vehicle Parts/threatanalyzer/ThreatAnalyzer.gd" id="26_ppxqv"]
[ext_resource type="Script" path="res://scenes/vehicles/Vehicle Parts/detector/EntityDetector.gd" id="27_gaj42"]
[ext_resource type="PackedScene" uid="uid://cjwrtbvi6cax0" path="res://scenes/vehicles/Vehicle Parts/detector/EntityDetectRays.tscn" id="28_4qnfc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hl48d"]
size = Vector3(3.60785, 1.42161, 7.03607)

[sub_resource type="BoxShape3D" id="BoxShape3D_lylep"]
size = Vector3(2.64273, 0.782476, 4.34402)

[sub_resource type="BoxShape3D" id="BoxShape3D_niyvq"]
size = Vector3(3.59349, 1.7884, 4.93023)

[sub_resource type="SphereShape3D" id="SphereShape3D_6v54j"]
radius = 50.0

[sub_resource type="BoxShape3D" id="BoxShape3D_hi8md"]
size = Vector3(50, 15, 100)

[node name="Enemy" type="RigidBody3D" groups=["enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.377973, 0)
collision_layer = 8
collision_mask = 11
mass = 50000.0
linear_damp_mode = 1
script = ExtResource("1_1ym0t")
abilitiesAvailable = Array[ExtResource("2_u6ig8")]([ExtResource("2_e151r"), ExtResource("3_1f5b1")])
patrolBehaviours = Array[ExtResource("5_jylig")]([ExtResource("4_p1ap5")])
faction = ExtResource("5_tjtjo")
vehicleStats = ExtResource("6_rnjby")

[node name="EventBus" type="Node" parent="."]
script = ExtResource("7_d4xyd")

[node name="Body" parent="." instance=ExtResource("8_d4mh7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.349)

[node name="Turret" parent="." instance=ExtResource("9_utbqh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11464, 0.127033)

[node name="BodyHitbox" type="Area3D" parent="." node_paths=PackedStringArray("ownerEntity") groups=["hitbox"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0769858, 0)
visible = false
collision_layer = 32
collision_mask = 0
script = ExtResource("10_13g83")
ownerEntity = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BodyHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.396235, -0.104433)
shape = SubResource("BoxShape3D_hl48d")

[node name="TurretHitbox" type="Area3D" parent="." node_paths=PackedStringArray("ownerEntity") groups=["hitbox"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47438, 0)
collision_layer = 32
collision_mask = 0
script = ExtResource("10_13g83")
ownerEntity = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TurretHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.107586, -0.359713)
shape = SubResource("BoxShape3D_lylep")

[node name="CollisionBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.965623, -0.19916)
shape = SubResource("BoxShape3D_niyvq")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Navigator" type="NavigationAgent3D" parent="."]
path_desired_distance = 2.0
target_desired_distance = 5.0
path_max_distance = 3.01
avoidance_enabled = true
radius = 5.0
max_speed = 20.0

[node name="AIFSM" type="Node" parent="." node_paths=PackedStringArray("startingState")]
script = ExtResource("11_50sik")
startingState = NodePath("patrol")

[node name="AIStats" type="Node" parent="AIFSM"]
script = ExtResource("12_txqpe")
patrolCurve = ExtResource("13_gw6h4")

[node name="investigate" type="Node" parent="AIFSM" node_paths=PackedStringArray("patrol_state", "attack_state")]
script = ExtResource("14_12br7")
patrol_state = NodePath("../patrol")
attack_state = NodePath("../attack")

[node name="CombatTimeout" type="Timer" parent="AIFSM/investigate"]
unique_name_in_owner = true

[node name="attack" type="Node" parent="AIFSM" node_paths=PackedStringArray("patrol_state", "attack_state", "investigate_state", "entityEventBus")]
script = ExtResource("15_mtrbh")
patrol_state = NodePath("../patrol")
attack_state = NodePath(".")
investigate_state = NodePath("../investigate")
entityEventBus = NodePath("../../EventBus")

[node name="RepositionTimer" type="Timer" parent="AIFSM/attack"]
one_shot = true

[node name="AttackTimer" type="Timer" parent="AIFSM/attack"]
one_shot = true

[node name="patrol" type="Node" parent="AIFSM" node_paths=PackedStringArray("attack_state", "patrol_state", "overwatch_state")]
script = ExtResource("16_g57o4")
attack_state = NodePath("../attack")
patrol_state = NodePath(".")
overwatch_state = NodePath("../overwatch")

[node name="overwatch" type="Node" parent="AIFSM" node_paths=PackedStringArray("attack_state", "overwatch_state", "patrol_state")]
script = ExtResource("17_6vq4v")
attack_state = NodePath("../attack")
overwatch_state = NodePath(".")
patrol_state = NodePath("../patrol")

[node name="OverwatchTimeout" type="Timer" parent="AIFSM/overwatch"]
unique_name_in_owner = true
one_shot = true

[node name="AimSwingTimer" type="Timer" parent="AIFSM/overwatch"]
unique_name_in_owner = true
one_shot = true

[node name="idle" type="Node" parent="AIFSM"]
script = ExtResource("18_858ui")

[node name="IdleTimer" type="Timer" parent="AIFSM/idle"]
one_shot = true

[node name="VehicleControllerFSM" type="Node" parent="." node_paths=PackedStringArray("startingState")]
script = ExtResource("19_ypd7k")
startingState = NodePath("idle")

[node name="VehicleStats" type="Node" parent="VehicleControllerFSM"]
script = ExtResource("20_ipyek")
accelVelocityCurve = ExtResource("21_4j1co")

[node name="turn" type="Node" parent="VehicleControllerFSM" node_paths=PackedStringArray("move_state", "idle_state", "brake_state")]
script = ExtResource("22_7njlb")
move_state = NodePath("../move")
idle_state = NodePath("../idle")
brake_state = NodePath("../brake")

[node name="move" type="Node" parent="VehicleControllerFSM" node_paths=PackedStringArray("idle_state", "turn_state", "brake_state")]
script = ExtResource("23_dcejv")
idle_state = NodePath("../idle")
turn_state = NodePath("../turn")
brake_state = NodePath("../brake")

[node name="idle" type="Node" parent="VehicleControllerFSM" node_paths=PackedStringArray("turn_state")]
script = ExtResource("24_hus7p")
turn_state = NodePath("../turn")

[node name="brake" type="Node" parent="VehicleControllerFSM" node_paths=PackedStringArray("idle_state", "turn_state")]
script = ExtResource("25_dwvvt")
idle_state = NodePath("../idle")
turn_state = NodePath("../turn")

[node name="ThreatAnalyzer" type="Node" parent="." node_paths=PackedStringArray("detector")]
script = ExtResource("26_ppxqv")
detector = NodePath("../Detector")

[node name="Detector" type="Node3D" parent="." node_paths=PackedStringArray("turret")]
script = ExtResource("27_gaj42")
turret = NodePath("../Turret")
detectorRaysScene = ExtResource("28_4qnfc")
detectionLifetime = 5.0

[node name="DetectionAreas" type="Area3D" parent="Detector"]
collision_layer = 0
collision_mask = 48
monitorable = false

[node name="Proximity" type="CollisionShape3D" parent="Detector/DetectionAreas"]
shape = SubResource("SphereShape3D_6v54j")

[node name="Looking" type="CollisionShape3D" parent="Detector/DetectionAreas"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50)
shape = SubResource("BoxShape3D_hi8md")

[node name="Hardpoints" type="Node3D" parent="."]

[node name="RearDeck" type="Node3D" parent="Hardpoints"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.12152, 2.35518)

[node name="Internal" type="Node3D" parent="Hardpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.601387, 0)

[connection signal="aiming_at_entity_state_changed" from="EventBus" to="." method="_on_event_bus_aiming_at_entity_state_changed"]
[connection signal="turret_target_reach" from="EventBus" to="." method="_on_event_bus_turret_target_reach"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="path_changed" from="Navigator" to="." method="_on_navigator_path_changed"]
[connection signal="target_reached" from="Navigator" to="." method="_on_navigator_target_reached"]
[connection signal="timeout" from="AIFSM/investigate/CombatTimeout" to="AIFSM/investigate" method="_on_combat_timeout_timeout"]
[connection signal="timeout" from="AIFSM/attack/RepositionTimer" to="AIFSM/attack" method="_on_reposition_timer_timeout"]
[connection signal="timeout" from="AIFSM/attack/AttackTimer" to="AIFSM/attack" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AIFSM/overwatch/OverwatchTimeout" to="AIFSM/overwatch" method="_on_overwatch_timeout_timeout"]
[connection signal="timeout" from="AIFSM/overwatch/AimSwingTimer" to="AIFSM/overwatch" method="_on_aim_swing_timer_timeout"]
[connection signal="timeout" from="AIFSM/idle/IdleTimer" to="AIFSM/idle" method="_on_idle_timer_timeout"]
[connection signal="threat_target_changed" from="ThreatAnalyzer" to="." method="_on_threat_analyzer_threat_target_changed"]
[connection signal="entityDied" from="Detector" to="ThreatAnalyzer" method="_on_detector_entity_died"]
[connection signal="visibleEntitiesAdded" from="Detector" to="ThreatAnalyzer" method="_on_detector_visible_entities_added"]
[connection signal="visibleEntitiesRemoved" from="Detector" to="ThreatAnalyzer" method="_on_detector_visible_entities_removed"]
[connection signal="area_entered" from="Detector/DetectionAreas" to="Detector" method="_on_detection_areas_area_entered"]
